--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-    <a href='http://arosner92.github.io' alt='Home'><h3>Home</h3></a>
-    <a href='http://arosner92.github.io/activity3' alt='Project 1'><h3>Project 1</h3></a>
+    <a href='http://arosner92.github.io' alt='Home'>Home</a>
+    <a href='http://arosner92.github.io/activity3' alt='Project 1'>Project 1</a>
     <h1>Alon Moshe Rosner</h1><br>
     <img src='https://i.kym-cdn.com/entries/icons/original/000/016/546/hidethepainharold.jpg' alt='Hide the Pain Harold'/><br>
     <p>I am from California. Born and raised in Norcal until I was 11 and then moved to Socal until I graduated high school. Went on a year abroad program in Israel and then moved to Georgia where my parents had just moved to. Went to college and here I am today in a Data Science Bootcamp.</p>
